--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,3 +25,13 @@ en:
   sessions:
     logout: 'Logout'
     invalid_login: 'Invalid login'
+  pundit:
+    role_policy:
+      name: 'Role'
+      create?: 'Create roles'
+      update?: 'Edit roles'
+    messages:
+      default: 'You cannot perform this action.'
+      role_policy:
+        update?: 'You cannot edit this role!'
+        create?: 'You cannot create roles!'
