fixed названия полей модели -> через локаль refs #11

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,3 +35,10 @@ en:
       role_policy:
         update?: 'You cannot edit this role!'
         create?: 'You cannot create roles!'
+  activerecord:
+    models:
+      role: 'Role'
+    attributes:
+      role:
+        title: 'Title'
+        activities: 'Activities'
